--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!--bagian header-->
         <header>
             <div class="container">
-                <img class="logo" src="assets/logo-warung-online.png" >
+                <img class="logo" src="logo-warung-online.png" >
                 <ul>
                     <li><a href=""></a>HOME</li>
                     <li><a href=""></a>PRODUCT</li>
