--- a/index.html
+++ b/index.html
@@ -1,51 +1,87 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Warung Online PRO2C27</title>
-        <link rel="stylesheet" type="text/css" href="stylesheet.css">
-        <link href="https://fonts.googleapis.com/css2?family=Piedra&display=swap" rel="stylesheet">
-        <link rel='stylesheet' type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
-    </head>
-    <body>
-    <!-- side bar-->
-        <input type="checkbox" id="check">
-        <div class="sidebar ">
-            <ul>
-                <li><a href=""></a>HOME</li>
-                <li><a href=""></a>PRODUCT</li>
-                <li><a href=""></a>CONTACT</li>
-                <li><a href=""></a>HUBUNGI KAMI</li>
-            </ul>
+  <head>
+    <meta charset="utf-8">
+    <title>Progate</title>
+    <link rel="stylesheet" href="stylesheet.css">
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+  </head>
+  <body>
+    <header>
+      <div class="container">
+        <div class="header-left">
+          <img class="logo" src="https://prog-8.com/images/html/advanced/main_logo.png">
         </div>
-    <!--bagian header-->
-        <header>
-            <div class="container">
-                <img class="logo" src="logo-warung-online.png" >
-                <ul>
-                    <li><a href=""></a>HOME</li>
-                    <li><a href=""></a>PRODUCT</li>
-                    <li><a href=""></a>CONTACT</li>
-                    <li><a href=""></a>HUBUNGI KAMI</li>
-                </ul>
-    <!--menu mobile-->
-                <label for="check" class="mobile-menu"><i class="fas fa-bars fa-2x"></i></label>
-            </div>
-        </header>
-    <!-- Bagian Banner-->
-        <div class="top-wrapper">
-            <div class="container">
-                <h2>Hello Pecinta Kuliner</h2>
-                <h3>Selamat Datang di Website Progate Batch 2 Grup C27</h3>
-                <h3>Kami menyediakan berbagai macam kuliner khas rumahan</h3>
-            </div>
+        <div class="header-right">
+          <a href="#" class="login">Log in</a>
         </div>
-    <!--Footer-->
-        <footer>
-            <div class="container">
-                <h2>PROGATE2|Grup C27</h2>
+      </div>
+    </header>
+    <div class="top-wrapper">
+      <div class="container">
+        <h1>BELAJAR CODING.</h1>
+        <h1>BELAJAR MENJADI LEBIH KREATIF.</h1>
+        <p>Progate adalah platform online untuk belajar coding.</p>
+        <p>Kami menawarkan lingkungan pemograman yang lengkap untuk mempermudah Anda memulai.</p>
+        <div class="btn-wrapper">
+          <a href="#" class="btn signup">Daftar dengan Email</a>
+          <p>atau</p>
+          <a href="#" class="btn facebook"><span class="fa fa-facebook"></span>Daftar dengan Facebook</a>
+          <a href="#" class="btn twitter"><span class="fa fa-twitter"></span>Daftar dengan Twitter</a>
+        </div>
+      </div>
+    </div>
+    <div class="lesson-wrapper">
+      <div class="container">
+        <div class="heading">
+          <h2>Cari tau dari mana Anda mau memulai!</h2>
+        </div>
+        <div class="lessons">
+          <div class="lesson">
+            <div class="lesson-icon">
+              <img src="https://prog-8.com/images/html/advanced/html.png">
+               <p>HTML & CSS</p>
             </div>
-        </footer>
-    </body>
+            <p class="txt-contents">Bahasa yang digunakan untuk membuat dan mendesain tampilan situs web Anda. </p>
+          </div>
+          <div class="lesson">
+            <div class="lesson-icon">
+              <img src="https://prog-8.com/images/html/advanced/jQuery.png">
+              <p>jQuery</p>
+            </div>
+            <p class="txt-contents">Library JavaScript yang cepat, kaya akan fitur, dan mudah digunakan yang menangani animasi dan permintaan Ajax.</p>
+          </div>
+          <div class="lesson">
+            <div class="lesson-icon">
+              <img src="https://prog-8.com/images/html/advanced/ruby.png">
+              <p>Ruby</p>
+            </div>
+            <p class="txt-contents">Bahasa dinamis, serba guna yang sederhana dan produktif. Ruby sering digunakan untuk membuat aplikasi web yang responsive.</p>
+          </div>
+          <div class="lesson">
+            <div class="lesson-icon">
+              <img src="https://prog-8.com/images/html/advanced/php.png">
+              <p>PHP</p>
+            </div>
+            <p class="txt-contents">Bahasa skrip open source yang dapat disematkan ke dalam HTML, dan cocok untuk pengembangan web.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="message-wrapper">
+      <div class="container">
+        <div class="heading">
+          <h2>Apakah Anda siap untuk menjadi programer yang handal?</h2>
+          <h3>Ayo belajar coding, ayo belajar menjadi lebih kreatif!</h3>
+        </div>
+        <span class="btn message">Mulai Belajar</span>
+      </div>
+    </div>
+    <footer>
+      <div class="container">
+        <img src="https://prog-8.com/images/html/advanced/footer_logo.png">
+        <p>Learn to code, learn to be creative.</p>
+      </div>
+    </footer>
+  </body>
 </html>
