--- a/index.html
+++ b/index.html
@@ -1,1 +1,43 @@
-
+<!doctype html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Warung Online PRO2C27</title>
+        <link rel="stylesheet" type="text/css" href="stylesheet.css">
+        <link href="https://fonts.googleapis.com/css2?family=Piedra&display=swap" rel="stylesheet">
+        <link rel='stylesheet' type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
+    </head>
+    <body>
+    <!-- side bar-->
+        <input type="checkbox" id="check">
+        <div class="sidebar ">
+            <ul>
+                <li><a href=""></a>HOME</li>
+                <li><a href=""></a>PRODUCT</li>
+                <li><a href=""></a>CONTACT</li>
+                <li><a href=""></a>HUBUNGI KAMI</li>
+            </ul>
+        </div>
+    <!--bagian header-->
+        <header>
+            <div class="container">
+                <img class="logo" src="logo-warung-online.png" >
+                <ul>
+                    <li><a href=""></a>HOME</li>
+                    <li><a href=""></a>PRODUCT</li>
+                    <li><a href=""></a>CONTACT</li>
+                    <li><a href=""></a>HUBUNGI KAMI</li>
+                </ul>
+    <!--menu mobile-->
+                <label for="check" class="mobile-menu"><i class="fas fa-bars fa-2x"></i></label>
+            </div>
+        </header>
+    <!-- Bagian Banner-->
+        <section class="banner">
+            <div class="container">
+               
+            </div>
+        </section>
+    </body>
+</html>
