--- a/index.html
+++ b/index.html
@@ -39,5 +39,8 @@
                
             </div>
         </section>
+    <!--Footer-->
+        <div class="container">
+            <p>Copyright © Digital Talent Scholarship Batch 2 | Group C27
     </body>
 </html>
