--- a/index.html
+++ b/index.html
@@ -41,6 +41,6 @@
         </section>
     <!--Footer-->
         <div class="container">
-            <p>Copyright © Digital Talent Scholarship Batch 2 | Group C27
+            <p>Copyright © Digital Talent Scholarship Batch 2 | Group C27</p>
     </body>
 </html>
