--- a/index.html
+++ b/index.html
@@ -35,24 +35,17 @@
         </header>
     <!-- main-->
        <div class="top-wrapper">
-      <div class="container">
-        <h1>BELAJAR CODING.</h1>
-        <h1>BELAJAR MENJADI LEBIH KREATIF.</h1>
-        <p>Progate adalah platform online untuk belajar coding.</p>
-        <p>Kami menawarkan lingkungan pemograman yang lengkap untuk mempermudah Anda memulai.</p>
-        <div class="btn-wrapper">
-          <a href="#" class="btn signup">Daftar dengan Email</a>
-          <p>atau</p>
-          <a href="#" class="btn facebook"><span class="fa fa-facebook"></span>Daftar dengan Facebook</a>
-          <a href="#" class="btn twitter"><span class="fa fa-twitter"></span>Daftar dengan Twitter</a>
+            <div class="container">
+                <h1>SELAMAT DATANG DI WEBSITE WARUNG ONLINE</h1>
+                <h1>PUSAT BELANJA ONLINE KULINER SNACK INDONESIA</h1>
+                <p>menyediakan berbagai macam produk makanan snack yang berkualitas dari berbagai daerah diindonesia</p>
+           </div>
         </div>
-      </div>
-    </div>
-    <div class="lesson-wrapper">
-      <div class="container">
-        <div class="heading">
-          <h2>Cari tau dari mana Anda mau memulai!</h2>
-        </div>
+        <div class="lesson-wrapper">
+            <div class="container">
+                <div class="heading">
+                    <h2>PRODUCT WARUNG ONLINE</h2>
+                </div>
         <div class="lessons">
           <div class="lesson">
             <div class="lesson-icon">
@@ -91,11 +84,18 @@
           <h2>Apakah Anda siap untuk menjadi programer yang handal?</h2>
           <h3>Ayo belajar coding, ayo belajar menjadi lebih kreatif!</h3>
         </div>
-        <span class="btn message">Mulai Belajar</span>
+        <span class="btn message">Mulai Order</span>
       </div>
     </div>
     <!--Footer-->
         <div class="container">
-            <p>Copyright © Digital Talent Scholarship Batch 2 | Group C27</p>
+            <p>Copyright © DTS Batch 2| PROGATE | Group C27</p>
+            <div class="btn-wrapper">
+              <a href="#" class="btn signup">Daftar dengan Email</a>
+              <p>atau</p>
+              <a href="#" class="btn facebook"><span class="fa fa-facebook"></span>Daftar dengan Facebook</a>
+              <a href="#" class="btn twitter"><span class="fa fa-twitter"></span>Daftar dengan Twitter</a>
+            </div>
+        </div>
     </body>
 </html>
