--- a/index.html
+++ b/index.html
@@ -55,34 +55,12 @@
                     <p class="txt-contents">Bahasa yang digunakan untuk membuat dan mendesain tampilan situs web Anda. </p>
                 </div>
                 <div class="lesson">
-            <div class="lesson-icon">
-              <img src="https://prog-8.com/images/html/advanced/jQuery.png">
-              <p>jQuery</p>
-            </div>
-            <p class="txt-contents">Library JavaScript yang cepat, kaya akan fitur, dan mudah digunakan yang menangani animasi dan permintaan Ajax.</p>
-          </div>
-          <div class="lesson">
-            <div class="lesson-icon">
-              <img src="https://prog-8.com/images/html/advanced/ruby.png">
-              <p>Ruby</p>
-            </div>
-            <p class="txt-contents">Bahasa dinamis, serba guna yang sederhana dan produktif. Ruby sering digunakan untuk membuat aplikasi web yang responsive.</p>
-          </div>
-          <div class="lesson">
-            <div class="lesson-icon">
-              <img src="https://prog-8.com/images/html/advanced/php.png">
-              <p>PHP</p>
-            </div>
-            <p class="txt-contents">Bahasa skrip open source yang dapat disematkan ke dalam HTML, dan cocok untuk pengembangan web.</p>
-          </div>
         </div>
-      </div>
-    </div>
     <div class="message-wrapper">
       <div class="container">
         <div class="heading">
-          <h2>Apakah Anda siap untuk menjadi programer yang handal?</h2>
-          <h3>Ayo belajar coding, ayo belajar menjadi lebih kreatif!</h3>
+          <h2>Silahkan Membeli Produk dari Warung Online</h2>
+          <h3>1X klik Snack Khas Indonesia langsung datang kerumah</h3>
         </div>
         <span class="btn message">Mulai Order</span>
       </div>
@@ -90,12 +68,7 @@
     <!--Footer-->
         <div class="container">
             <p>Copyright © DTS Batch 2| PROGATE | Group C27</p>
-            <div class="btn-wrapper">
-              <a href="#" class="btn signup">Daftar dengan Email</a>
-              <p>atau</p>
-              <a href="#" class="btn facebook"><span class="fa fa-facebook"></span>Daftar dengan Facebook</a>
-              <a href="#" class="btn twitter"><span class="fa fa-twitter"></span>Daftar dengan Twitter</a>
-            </div>
+            
         </div>
     </body>
 </html>
