--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         </header>
     <!-- main-->
        <div class="top-wrapper">
+           <img class="logo" src="background-banner.jpg">
             <div class="container">
                 <h1>SELAMAT DATANG DI WEBSITE WARUNG ONLINE</h1>
                 <h1>PUSAT BELANJA ONLINE KULINER SNACK INDONESIA</h1>
