--- a/index.html
+++ b/index.html
@@ -35,18 +35,19 @@
         </header>
     <!-- main-->
        <div class="top-wrapper">
-           <img class="logo" src="background-banner.jpg">
-            <div class="container">
-                <h1>SELAMAT DATANG DI WEBSITE WARUNG ONLINE</h1>
-                <h1>PUSAT BELANJA ONLINE KULINER SNACK INDONESIA</h1>
-                <p>menyediakan berbagai macam produk makanan snack yang berkualitas dari berbagai daerah diindonesia</p>
+         <div class="container">
+           <h1>SELAMAT DATANG DI WEBSITE WARUNG ONLINE</h1>
+           <h1>PUSAT BELANJA ONLINE KULINER SNACK INDONESIA</h1>
+           <p>menyediakan berbagai macam produk makanan snack yang berkualitas dari berbagai daerah diindonesia</p>
            </div>
         </div>
         
     <!--Footer-->
+        <footer>
         <div class="container">
             <p>Copyright © DTS Batch 2| PROGATE | Group C27</p>
             
         </div>
+        </footer>
     </body>
 </html>
