--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
        <div class="top-wrapper">
          <div class="container">
            <h1>SELAMAT DATANG DI WEBSITE WARUNG ONLINE</h1>
-           <h1>PUSAT BELANJA ONLINE KULINER SNACK INDONESIA</h1>
-           <p>menyediakan berbagai macam produk makanan snack yang berkualitas dari berbagai daerah diindonesia</p>
+           <h1>PUSAT BELANJA ONLINE PRODUK BERKUALITAS</h1>
+           <p>menyediakan berbagai macam produk pakaian, sepatu, tas, dan berbagai macam produk lainnya</p>
            </div>
         </div>
         
